v1.10.14.3-dev # leves mejoras | +ajustes/correcciones